# tsc

./: .clang-format  .gitignore  .travis.yml  BUILD  CMakeLists.txt  CPPLINT.cfg  Doxyfile  LICENSE  Makefile  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.tsc  NA12878_S1.sam.short.sam.REMOVED.git-id  README  README.md  TODO  TODO.md  accodec.c  accodec.h  auxcodec.c  auxcodec.h  auxenc.c  auxenc.h  azure-pipelines.yml  build  build.sh  cbufstr.c  cbufstr.h  circstrbuf.c  circstrbuf.h  contributors.txt  copyright.txt  filecodec.c  filecodec.h  fileenc.c  fileenc.h  freader.c  freader.h  frw.c  frw.h  frwb.c  frwb.h  (+26 more)
.kdev4/: tsc.kdev4
arithcodec/: Makefile  arith  arithcodec.c  arithcodec.h  burn-in.pl  copyright.txt  main.c  make_staticlib.sh  test_codec.pl
arithcodec/tests/: test.txt.ac  (+1 more)
ci/: build.sh  test-roundtrip.sh  test_roundtrips.sh
clipboard/: 112Req_scheduleV3.docx  wXXXXX - Seminar on Genome Compression Standardization.doc  wXXXXX_CfE_GenomeCompression.docx  wXXXX_CfE_GenomeCompression.xlsx  wXXXX_Reqs_GCS.doc
cmake/: CMakeListsGoogleTest.txt.in  GoogleTest.cmake  Summary.cmake
doc/: N15092_Database_for_Evaluation_of Genome_Compression_and_Storage.doc
doc/Patent_Application/: .directory  (+4 more)
extras/: run-cpplint.sh
framework/: Makefile  copyright.txt  filecodec.c  filecodec.h  samparser.h  samrecord.h  tsc.c  tsclib.h  version.h
gidb/: Evaluation.xlsx  Genomic_Information_Database.odt  Supplementary_Data.docx  bam.list  carl_ERP001960_NA12878_S1.sam.nohup.out  cp2013-12_HCC1954.mix1.n80t20.sam.short.sam.nohup.out  gidb.docx  helena1_K562_cytosol_LID8465_TopHat_v2.sam.short.sam.nohup.out  nautilus_9827_2#49.sam.nohup.out  nautilus_MiSeq_Ecoli_DH10B_110721_PF.sam.nohup.out  quip_compress  quip_decompress  quip_diffcheck  results.xlsx  run_tools  sam.list  sam.short.sam.list  tsc_benchmark_results.tmp.xlsx  tsc_benchmark_results.xlsx  tsc_benchmark_results_clean.xlsx  tsc_compress  tsc_decompress  tsc_diffcheck  tsc_param.txt
gomp/: Makefile  copyright.txt  crc64.h  filecodec.c  fqparser.c  fqparser.h  gomp.c  gomplib.c  gomplib.h  gplv3.txt  prepend_copyright  samcodec.c  samcodec.h  samparser.c  samparser.h  samparser.h.autosave  samrec.h  samrecord.h  str.c  str.h  version.h
libtnt/: Makefile
matlab/: .directory  Genomic_Information_Database.odt  bam.list  fastq.list  run_samsplit.pl
old/: Doxyfile  filecodec.c  filecodec.h  samparser.h  samrecord.h  tsc  tsclib.c  tsclib.h  version.h
ricecodec/: Makefile  burn-in.pl  main.c  make_staticlib.sh  prepend_copyright.sh  rice  ricecodec.c  ricecodec.h  test_codec.pl  tmp.dat.rice  tntlib_common.h
sam/: MiSeqTest.sam.tsc.sam
samtests/: MiSeqTest.sam.rice  MiSeqTest.sam.tsc
scripts/: build.sh  clean.sh  test.sh
source/: auxcodec.c  bbuf.c  cbufint64.c  cbufstr.c  cbufstr.h  fio.c  fio.h  idcodec.c  idcodec.h  log.c  mem.c  mem.h  nuccodec.c  nuccodec.h  nuccodec_o1.c  nuccodec_o1.h  paircodec.c  qualcodec.c  range.c  range.h  samcodec.c  samcodec.h  samparser.c  str.c  tsc.c  tsc.h  tscfmt.c  tscfmt.h  version.h
source/tsc/: CMakeLists.txt  auxcodec.c  auxcodec.h  bbuf.c  cbufint64.c  cbufint64.h  cbufstr.c  cbufstr.h  common.c  crc64.c  crc64.h  fio.c  fio.h  idcodec.c  idcodec.h  log.c  log.h  mem.c  mem.h  nuccodec.c  nuccodec.h  paircodec.c  paircodec.h  qualcodec.c  qualcodec.h  range.c  range.h  samcodec.c  samcodec.h  samparser.c  samparser.h  str.c  str.h  tsc.c  tsc.h  tscfmt.c  tscfmt.h  zlib-wrap.c  zlib-wrap.h  zlib_wrap.c
src/: CMakeLists.txt  DH10B_tiny.sam  Doxyfile  Makefile  accodec.c  auxcodec.c  auxcodec.h  bbuf.c  bbuf.h  cbufint64.c  cbufint64.h  cbufstr.c  cbufstr.h  common.c  common.h  copyright.txt  crc64.c  crc64.h  filecodec.c  filecodec.h  frw.c  frw.h  license.txt  map.txt  nuccodec.c  nuccodec.h  qualcodec.c  qualcodec.h  range.c  range.h  ricecodec.c  ricecodec.h  samcodec.c  samcodec.h  samparser.c  samparser.h  samrec.h  samrecord.h  seqcodec.c  seqcodec.h  (+9 more)
src/tsc/: CMakeLists.txt  auxcodec.c  auxcodec.h  cbufint64.c  cbufint64.h  cbufstr.c  cbufstr.h  common.c  common.h  crc64.c  crc64.h  fio.c  fio.h  idcodec.c  idcodec.h  log.c  log.h  main.cc  mem.c  mem.h  nuccodec.c  nuccodec.h  paircodec.c  paircodec.h  qualcodec.c  qualcodec.h  range.c  sam.h  samcodec.c  samcodec.h  samparser.c  samparser.h  samrec.h  str.c  str.h  tsc.c  tsc.h  tscfmt.c  tscfmt.h  zlib-wrap.h  (+2 more)
src_new/: Doxyfile  common.c  common.h  gplv3.txt  samcodec.c  samcodec.h  samparser.c  samparser.h  samrec.h  tsc.c  tscfmt.c  tscfmt.h  tsclib.c  tsclib.h  version.h
tbd/: fqcodec.c  fqparser.c  lut.c  range.c  range.h
test/: CMakeLists.txt  sam_test.cc
test_files/: 9827_2#49.sam.short.sam.REMOVED.git-id  MiSeqTest.sam  MiSeqTest.sam.tsc  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.tsc  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.tsc.REMOVED.git-id  sample-2-10_sorted.sam.short.sam.REMOVED.git-id  test.sam.tsc  xx#minimal.sam.tsc  xx#pair.sam.tsc  xx#pair.sam.tsc.sam  xx#rg.sam.tsc  xx#triplet.sam.tsc  xx#triplet.sam.tsc.sam
tests/: MiSeqTest.sam  MiSeqTest.sam.tsc  MiSeqTest.sam.tsc.sam  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.REMOVED.git-id  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.ac.REMOVED.git-id  MiSeq_Ecoli_DH10B_110721_PF.sam.short.sam.tsc.REMOVED.git-id  ac_test  ac_test.c  ac_test.h  burn-in.pl  main.c  sam.short.sam.list  samspectest.sam  test  test.txt.ac  xx#blank.sam.tsc  xx#minimal.sam.tsc
tsc/: Makefile  accodec.h  auxcodec.c  auxcodec.h  bbuf.c  bbuf.h  crc64.c  filecodec.c  filecodec.h  frw.h  nuccodec.c  qualcodec.c  qualcodec.h  samparser.c  str.c  tsc  tsc.c  tsclib.c  tsclib.h
zpipe/: zpipe
(+309 files in other folders)
